run first program

--- a/evm.ipynb
+++ b/evm.ipynb
@@ -2,23 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 45,
    "id": "554af289",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%capture\n",
-    "%run 03_stack.ipynb\n",
-    "%run 04_memory.ipynb\n",
-    "%run 05_storage.ipynb\n",
-    "%run 06_opcodes.ipynb\n",
-    "%run 07_stop.ipynb\n",
-    "%run 08_math.ipynb"
+    "%run 02_stack.ipynb\n",
+    "%run 03_memory.ipynb\n",
+    "%run 04_storage.ipynb\n",
+    "%run 05_opcodes.ipynb\n",
+    "%run 06_stop.ipynb\n",
+    "%run 07_math.ipynb\n",
+    "%run push.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "id": "67ef5ff6",
    "metadata": {},
    "outputs": [],
@@ -54,9 +55,7 @@
     "    def run(self):\n",
     "        while self.should_execute_next_opcode():\n",
     "            op = self.program[self.pc]\n",
-    "            print(\"op: \", hex(op))\n",
-    "            print(\"pc: \" , self.pc)\n",
-    "\n",
+    "            \n",
     "            if op == STOP: stop(self)\n",
     "                \n",
     "            if op == ADD: add(self)\n",
