--- a/run.ipynb
+++ b/run.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "385e0b33",
+   "execution_count": 128,
+   "id": "f7bd727d",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%capture\n",
-    "%run evm.ipynb"
+    "%run evm.ipynb\n",
+    "%run bytecode.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "3c421fd3",
+   "execution_count": 129,
+   "id": "ced15ada",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,55 +23,65 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 59,
-   "id": "2a700e34",
+   "cell_type": "markdown",
+   "id": "e992e4d5",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "PROGRAM = [\n",
-    "    PUSH1,\n",
-    "    0x42,\n",
-    "    PUSH1,\n",
-    "    0x69,\n",
-    "    ADD,\n",
-    "    STOP\n",
-    "]"
+    "Set up the EVM"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "a289cbfd",
+   "execution_count": 130,
+   "id": "dd61fcdb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "evm = EVM(PROGRAM, GAS)"
+    "evm = EVM(SIMPLE_ADD, GAS)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f29be7d7",
+   "metadata": {},
+   "source": [
+    "Run it!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "2da92bf4",
+   "execution_count": 131,
+   "id": "41304ed0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evm.run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cd1d5ba",
+   "metadata": {},
+   "source": [
+    "Take a look at the result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "682a198c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "op:  0x60\n",
-      "pc:  0\n",
-      "op:  0x60\n",
-      "pc:  2\n",
-      "op:  0x1\n",
-      "pc:  4\n",
-      "op:  0x0\n",
-      "pc:  5\n"
+      "321\n"
      ]
     }
    ],
    "source": [
-    "evm.run()"
+    "print(evm.stack)"
    ]
   }
  ],
