--- a/01_introduction.ipynb
+++ b/01_introduction.ipynb
@@ -69,6 +69,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f5e7b39d",
+   "metadata": {},
+   "source": [
+    "## Gas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55c3d2bc",
+   "metadata": {},
+   "source": [
+    "Every Ethereum node has to execute the same bytecode. To avoid a DDOS attack for example every opcode costs a specific amount of gas.\n",
+    "\n",
+    "Gas has to be paid in ETH. If you run out of gas while executing your bytecode your execution stops."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b4fd54c6",
    "metadata": {},
    "source": [
