--- a/08_comparisions.ipynb
+++ b/08_comparisions.ipynb
@@ -2,8 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "02932420",
+   "execution_count": 12,
+   "id": "2d075d2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "%run utils.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a222fba0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,19 +27,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "780803a2",
+   "execution_count": 7,
+   "id": "e626f7af",
    "metadata": {},
    "outputs": [],
    "source": [
     "def slt(evm):\n",
-    "    pass"
+    "    a, b = evm.stack.pop(), evm.stack.pop()\n",
+    "    a = unsigned_to_signed(a)\n",
+    "    b = unsigned_to_signed(b)\n",
+    "    evm.stack.push(1 if a < b else 0)\n",
+    "    evm.pc += 1\n",
+    "    evm.gas_dec(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "76f4f9aa",
+   "execution_count": 8,
+   "id": "cd80ba41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,19 +57,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "55618e2e",
+   "execution_count": 9,
+   "id": "8d564d7d",
    "metadata": {},
    "outputs": [],
    "source": [
     "def sgt(evm):\n",
-    "    pass"
+    "    a, b = evm.stack.pop(), evm.stack.pop()\n",
+    "    a = unsigned_to_signed(a)\n",
+    "    b = unsigned_to_signed(b)\n",
+    "    evm.stack.push(1 if a > b else 0)\n",
+    "    evm.pc += 1\n",
+    "    evm.gas_dec(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "6230af32",
+   "execution_count": 10,
+   "id": "311a0d2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,8 +87,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2fe527cb",
+   "execution_count": 11,
+   "id": "9ac8ac44",
    "metadata": {},
    "outputs": [],
    "source": [
