--- a/bytecode.ipynb
+++ b/bytecode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "32fc76b5",
+   "id": "a8df4652",
    "metadata": {},
    "source": [
     "# Bytecode"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ea63f33",
+   "id": "b990ce33",
    "metadata": {},
    "source": [
     "Now that we have the EVM we can talk a little more about the Bytecode. Bytecode is executed by the EVM."
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4c51151",
+   "id": "328650bf",
    "metadata": {},
    "source": [
     "Valid Bytecode is simply a list of valid opcodes and their operands.\n",
@@ -27,7 +27,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03b33e1c",
+   "id": "7faf024a",
+   "metadata": {},
+   "source": [
+    "## Simple Push"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26583b36",
    "metadata": {},
    "source": [
     "The program that pushes `0x42` on the stack would look like this."
@@ -36,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6bc1c031",
+   "id": "ad6e1d4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fab8a8f8",
+   "id": "623a60a8",
    "metadata": {},
    "source": [
     "or simply: `0x6042`"
@@ -53,7 +61,33 @@
   },
   {
    "cell_type": "markdown",
-   "id": "806179e4",
+   "id": "97a31ac1",
+   "metadata": {},
+   "source": [
+    "## Instructions and Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efe4cdde",
+   "metadata": {},
+   "source": [
+    "As you can see, the bytecode consists of both instructions **and** data. It is up to the program writer to make sure that data and instructions are not mixed up.\n",
+    "\n",
+    "This is what we call the `von Neumann architecture`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fba30525",
+   "metadata": {},
+   "source": [
+    "## Simple Add"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49e81846",
    "metadata": {},
    "source": [
     "Another simple program could look like this. Here we push `0x42` and `0xFF` on the stack and add them together and put the result back onto the stack."
@@ -62,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5030f8db",
+   "id": "f3bf38e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9ce0c9d",
+   "id": "c192ca5a",
    "metadata": {},
    "source": [
     "After executing this we should have a stack with exactly one element `321` on it."
@@ -79,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05fb01a9",
+   "id": "9b566707",
    "metadata": {},
    "source": [
     "In the next step we will use the EVM that we built to actually execute these programs."
