--- a/evm.ipynb
+++ b/evm.ipynb
@@ -18,6 +18,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "91d909b8",
+   "metadata": {},
+   "source": [
+    "# EVM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "330e47f9",
+   "metadata": {},
+   "source": [
+    "Now we are going to put everything together."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c727c77e",
+   "metadata": {},
+   "source": [
+    "### Program Counter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "803b54b9",
+   "metadata": {},
+   "source": [
+    "The program counter indexes into the bytecode. It tells the EVM which opcode to execute next"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 47,
    "id": "67ef5ff6",
