--- a/02_stack.ipynb
+++ b/02_stack.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73160a8c",
+   "id": "6f5d2a45",
    "metadata": {},
    "source": [
     "The EVM stack has a maximum capacity of `1024`. Every value on the stack is a 256 bit value (32 bytes)."
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "a95f8b9d",
+   "id": "0e704969",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1649f55",
+   "id": "8271e2b6",
    "metadata": {},
    "source": [
     "We also throw an exception if we try to pop a value of a stack that is empty."
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "id": "102cacf7",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,11 @@
     "        \n",
     "    def pop (self): \n",
     "        if len(self.items) == 0: raise Exception(\"Stack underflow\")\n",
-    "        return self.items.pop()"
+    "        return self.items.pop()\n",
+    "    \n",
+    "    def pop(self, n):\n",
+    "        if len(self.items) < n: raise Exception(\"Stack overflow\")\n",
+    "        del self.items[n]"
    ]
   },
   {
