--- a/03_memory.ipynb
+++ b/03_memory.ipynb
@@ -15,12 +15,14 @@
    "source": [
     "The memory is basically a long list of bytes. It start of empty. Everytime we need to make that list bigger we have to pay a gas fee.\n",
     "\n",
+    "It is similar to RAM in a computer. Its volatile.\n",
+    "\n",
     "Each memory cell can hold 1 byte (256 bits). A number between 0x00 (0) and 0xFF (255)."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1c9a1762",
+   "id": "a204fbf0",
    "metadata": {},
    "source": [
     "![title](static/memory.png)"
@@ -28,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2b6f94b",
+   "id": "ae2a99e2",
    "metadata": {},
    "source": [
     "There are three memory opcodes that are important for us. One for loading and two for storing.\n",
@@ -66,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "e597c63d",
+   "id": "aa067152",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f5f079c",
+   "id": "ed4d85a5",
    "metadata": {},
    "source": [
     "Lets add the gas expansion calculation to the Memory"
@@ -128,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "4b6722f1",
+   "id": "83e1343f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de83d03e",
+   "id": "0ca7d815",
    "metadata": {},
    "source": [
     "As explained in the beginning. The EVM only allows us to load an entire word, even if the value that we are looking for is shorter than a word. "
@@ -146,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "70e11e32",
+   "id": "868202d7",
    "metadata": {},
    "outputs": [
     {
