--- a/04_storage.ipynb
+++ b/04_storage.ipynb
@@ -15,12 +15,14 @@
    "source": [
     "The storage of a contract is  a mapping from a `key` to a `value`. \n",
     "\n",
+    "This is like the SSD in your computer\n",
+    "\n",
     "The number of keys is for all practical purposes infinite. The value can be up to 32 bytes. Every value is initialized with a 0."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ad5500d9",
+   "id": "2a9d3e0b",
    "metadata": {},
    "source": [
     "![title](static/storage.png)"
@@ -28,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c36506db",
+   "id": "f0d8d8db",
    "metadata": {},
    "source": [
     "source: https://docs.alchemy.com/docs/smart-contract-storage-layout"
@@ -36,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "107d013f",
+   "id": "0672532a",
    "metadata": {},
    "source": [
     "We will represent the storage as a dictionary."
@@ -175,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a856b2d3",
+   "id": "257055b8",
    "metadata": {},
    "source": [
     "Reading a random storage that was not set to any value will return 0 and **not** throw an exception."
@@ -184,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "2da37f26",
+   "id": "bc839596",
    "metadata": {},
    "outputs": [
     {
