--- a/13_pop.ipynb
+++ b/13_pop.ipynb
@@ -1,25 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "427bd1ea",
-   "metadata": {},
-   "source": [
-    "Things we are not considering:\n",
-    "\n",
-    "- under/over-flow protection\n",
-    "- state access warm/cold like extcodesize\n",
-    "- no proof of stake opcodes\n",
-    "- gas refund"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "756ec8db",
+   "execution_count": 1,
+   "id": "c6946ddc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def _pop(evm, n):\n",
+    "    evm.pc += 2\n",
+    "    evm.gas_dec(2)\n",
+    "    evm.stack.pop(n)"
+   ]
   }
  ],
  "metadata": {
