--- a/18_dup.ipynb
+++ b/18_dup.ipynb
@@ -1,25 +1,20 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "427bd1ea",
-   "metadata": {},
-   "source": [
-    "Things we are not considering:\n",
-    "\n",
-    "- under/over-flow protection\n",
-    "- state access warm/cold like extcodesize\n",
-    "- no proof of stake opcodes\n",
-    "- gas refund"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "756ec8db",
+   "execution_count": 2,
+   "id": "bbba6da5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def _dup(evm, n):\n",
+    "    # make sure stack is big enough!\n",
+    "    value = evm.stack[n]\n",
+    "    evm.stack.push(value)\n",
+    "\n",
+    "    evm.pc += 1\n",
+    "    evm.gas_dec(3)"
+   ]
   }
  ],
  "metadata": {
