--- a/24_evm.ipynb
+++ b/24_evm.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91d909b8",
+   "id": "a8ff23d2",
    "metadata": {},
    "source": [
     "# EVM"
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "330e47f9",
+   "id": "30ffc676",
    "metadata": {},
    "source": [
     "Now we are going to put everything together."
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c727c77e",
+   "id": "e45981aa",
    "metadata": {},
    "source": [
     "### Program Counter"
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "803b54b9",
+   "id": "f1b00fa4",
    "metadata": {},
    "source": [
     "The program counter indexes into the bytecode. It tells the EVM which opcode to execute next"
@@ -59,14 +59,18 @@
     "class EVM:\n",
     "    def __init__(self,\n",
     "                 program,\n",
-    "                 gas):\n",
+    "                 gas,\n",
+    "                 value,\n",
+    "                 calldata=[]):\n",
     "        self.pc      = 0\n",
     "        self.stack   = Stack()\n",
     "        self.memory  = Memory()\n",
     "        self.storage = Storage()\n",
     "        \n",
-    "        self.program = program\n",
-    "        self.gas     = gas\n",
+    "        self.program  = program\n",
+    "        self.gas      = gas\n",
+    "        self.value    = value\n",
+    "        self.calldata = calldata\n",
     "        \n",
     "        self.stop_flag = False\n",
     "        \n",
