--- a/01_introduction.ipynb
+++ b/01_introduction.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5e7b39d",
+   "id": "b091c9e9",
    "metadata": {},
    "source": [
     "## Gas"
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55c3d2bc",
+   "id": "108c38a4",
    "metadata": {},
    "source": [
     "Every Ethereum node has to execute the same bytecode. To avoid a DDOS attack for example every opcode costs a specific amount of gas.\n",
@@ -171,6 +171,24 @@
     "We will build the EVM from the bottom up. We will start with the `Stack`, move to `Memory` and `Storage`. Then we implement all EVM `opcodes`. In the end we will combine all these building blocks to create the `EVM`.\n",
     "\n",
     "Then we will use the EVM to execute some bytecode."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2857684a",
+   "metadata": {},
+   "source": [
+    "### What it is not about"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f73f1f8",
+   "metadata": {},
+   "source": [
+    "We will only talk about the execution engine. We will not talk about consensus mechansim like proof of work of proof of stake. \n",
+    "\n",
+    "If you are interested in these topics check out my video series I did a while back."
    ]
   },
   {
