--- a/24_evm.ipynb
+++ b/24_evm.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8ff23d2",
+   "id": "8a939971",
    "metadata": {},
    "source": [
     "# EVM"
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30ffc676",
+   "id": "4a9a06a9",
    "metadata": {},
    "source": [
     "Now we are going to put everything together."
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e45981aa",
+   "id": "565cc202",
    "metadata": {},
    "source": [
     "### Program Counter"
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1b00fa4",
+   "id": "695c62f1",
    "metadata": {},
    "source": [
     "The program counter indexes into the bytecode. It tells the EVM which opcode to execute next"
@@ -72,7 +72,11 @@
     "        self.value    = value\n",
     "        self.calldata = calldata\n",
     "        \n",
-    "        self.stop_flag = False\n",
+    "        self.stop_flag   = False\n",
+    "        self.revert_flag = False\n",
+    "        \n",
+    "        self.returndata = []\n",
+    "        self.logs       = []\n",
     "        \n",
     "    def peek(self): return self.program[self.pc]\n",
     "    \n",
@@ -85,6 +89,7 @@
     "    def should_execute_next_opcode(self):\n",
     "        if self.pc > len(self.program)-1: return False\n",
     "        if self.stop_flag               : return False\n",
+    "        if self.revert_flag             : return False\n",
     "        \n",
     "        return True\n",
     "    \n",
