--- a/99_conclusion.ipynb
+++ b/99_conclusion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "427bd1ea",
+   "id": "f48af006",
    "metadata": {},
    "source": [
     "Things we are not considering:\n",
@@ -10,13 +10,15 @@
     "- under/over-flow protection\n",
     "- state access warm/cold like extcodesize\n",
     "- no proof of stake opcodes\n",
-    "- gas refund"
+    "- gas refund\n",
+    "- static call\n",
+    "- delegate call"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "756ec8db",
+   "id": "eb7287cc",
    "metadata": {},
    "outputs": [],
    "source": []
