--- a/01_introduction.ipynb
+++ b/01_introduction.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b091c9e9",
+   "id": "87db8f64",
    "metadata": {},
    "source": [
     "## Gas"
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "108c38a4",
+   "id": "7d21e04b",
    "metadata": {},
    "source": [
     "Every Ethereum node has to execute the same bytecode. To avoid a DDOS attack for example every opcode costs a specific amount of gas.\n",
@@ -170,12 +170,16 @@
    "source": [
     "We will build the EVM from the bottom up. We will start with the `Stack`, move to `Memory` and `Storage`. Then we implement all EVM `opcodes`. In the end we will combine all these building blocks to create the `EVM`.\n",
     "\n",
-    "Then we will use the EVM to execute some bytecode."
+    "Then we will use the EVM to execute some bytecode.\n",
+    "\n",
+    "The context will be as if the bytecode lives alone. There are no other contracts or accounts to interact with. This is a deliberate choice to keep it simple.\n",
+    "\n",
+    "Opcodes that interact with other accounts, contracts or the ethereum state are mocked."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2857684a",
+   "id": "4db65e9a",
    "metadata": {},
    "source": [
     "### What it is not about"
@@ -183,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f73f1f8",
+   "id": "56d72250",
    "metadata": {},
    "source": [
     "We will only talk about the execution engine. We will not talk about consensus mechansim like proof of work of proof of stake. \n",
