--- a/01_introduction.ipynb
+++ b/01_introduction.ipynb
@@ -10,14 +10,52 @@
   },
   {
    "cell_type": "markdown",
+   "id": "097764c8",
+   "metadata": {},
+   "source": [
+    "> \"If you can not build it from scratch, you do not understand it\". \n",
+    "\n",
+    "If you have ever interacted with Ethereum, whether as a developer or as a user, there is a good chance you came across the term `EVM`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86720763",
+   "metadata": {},
+   "source": [
+    "## EVM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "417c933d",
+   "metadata": {},
+   "source": [
+    "The EVM is a central part of Ethereum. It is Ethereum's execution engine, responsible for executing Ethereum programs, also called Smart Contracts."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e36f50fb",
+   "metadata": {},
+   "source": [
+    "In this tutorial we are going to build the EVM from scratch. However, **this is not a reference implementation.** I will omit implementation details if I believe they are not necessary for understanding how the EVM works. This is about learning the core concepts of the EVM from first principles."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1658984f",
+   "metadata": {},
+   "source": [
+    "That is why I want to call it a mini-EVM. A working but simplified version of the real thing. A virtual machine that takes in an Ethereum program as input and executes that."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6b794f53",
    "metadata": {},
    "source": [
-    "## EVM\n",
-    "\n",
-    "We are going to build the EVM from scratch. The EVM or \"Ethereum Virtual Machine\" is the execution engine of Ethereum. \n",
-    "\n",
-    "It is a `Virtual Machine` responsible for executing `bytecode`."
+    "But what is the EVM exactly? It is a `Virtual Machine` responsible for executing Ethereum `bytecode`."
    ]
   },
   {
@@ -27,13 +65,32 @@
    "source": [
     "## Virutal Machine\n",
     "\n",
-    "Its a pretend (virtual) computer running on your real computer. Just like a real computer it has its own language.\n",
+    "A virtual machine is like a make-believe computer that runs on your real computer. Instead of needing a separate physical machine, it's all done with software on the computer you already have.\n",
     "\n",
-    "This language is called the `instruction set`. These operations are very simple and are actually implemented in your hardware itself.\n",
-    "\n",
-    "The EVM is `virtual`. It is software not hardware. It is `simulating` a cpu on top of your real cpu.\n",
-    "Like any other cpu it has its own `instruction set`. Instructions in the instruction set are also called `opcodes`.\n",
-    "\n",
+    "Just like a real computer it has its own language. For the EVM this language is called Ethereum bytecode. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9101ece",
+   "metadata": {},
+   "source": [
+    "## Bytecode"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "babdf8b1",
+   "metadata": {},
+   "source": [
+    "Bytecode is simply a list of valid EVM operations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bf819c8",
+   "metadata": {},
+   "source": [
     "Some of these instructions can be seen below:\n",
     "\n",
     "| OPCODE | NAME | DESCRIPTION |\n",
@@ -51,14 +108,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9101ece",
-   "metadata": {},
-   "source": [
-    "## Bytecode"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "2046970f",
    "metadata": {},
    "source": [
@@ -69,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87db8f64",
+   "id": "730b8d72",
    "metadata": {},
    "source": [
     "## Gas"
@@ -77,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d21e04b",
+   "id": "68ebd7ba",
    "metadata": {},
    "source": [
     "Every Ethereum node has to execute the same bytecode. To avoid a DDOS attack for example every opcode costs a specific amount of gas.\n",
@@ -137,26 +186,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a911f04",
-   "metadata": {},
-   "source": [
-    "## Our goal"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "545ce1cb",
-   "metadata": {},
-   "source": [
-    "We will not build a compiler or a new programming language that targets the EVM here. Although this would certainly be interesting!\n",
-    "\n",
-    "We will build the EVM. A virutal machine that executes EVM bytecode.\n",
-    "\n",
-    "So something that takes in the input `604260005260206000F3` for example and executes that opcode by opcode."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "110dba1d",
    "metadata": {},
    "source": [
@@ -179,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4db65e9a",
+   "id": "3b676cae",
    "metadata": {},
    "source": [
     "### What it is not about"
@@ -187,12 +216,32 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56d72250",
+   "id": "4bf2df9c",
    "metadata": {},
    "source": [
-    "We will only talk about the execution engine. We will not talk about consensus mechansim like proof of work of proof of stake. \n",
+    "We will only talk about the execution. We will not talk about consensus mechansims like proof of work of proof of stake.\n",
     "\n",
-    "If you are interested in these topics check out my video series I did a while back."
+    "If you are interested in these topics check out my video series I did a while back.\n",
+    "\n",
+    "We are also only building the EVM in total \"isolation\". Our EVM is only aware of its bytecode. It does not know about other smart contracts or the current state of the blockchain itself."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08b47f0e",
+   "metadata": {},
+   "source": [
+    "## Resources"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e548a89f",
+   "metadata": {},
+   "source": [
+    "If you are looking for a understandable reference implemenation I highly recommend [Py-EVM](https://github.com/ethereum/py-evm).\n",
+    "\n",
+    "[evm.codes](https://www.evm.codes/) is the best reference for looking opcodes and what they do."
    ]
   },
   {
@@ -209,8 +258,6 @@
    "metadata": {},
    "source": [
     "I will not go for exact EVM equivalence. This is not the point of this project. This is about learning the core concepts of the EVM from first principles. If I think that some implementation detail is not necessary for understanding the core concepts I will leave them out.\n",
-    "\n",
-    "If you are looking for a understandable reference implemenation I highly recommend [Py-EVM](https://github.com/ethereum/py-evm).\n",
     "\n",
     "If you think I'm leaving out something interesting, please leave a comment below the video or create an issue or pull request on GitHub."
    ]
