--- a/01_introduction.ipynb
+++ b/01_introduction.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "097764c8",
+   "id": "761fadc5",
    "metadata": {},
    "source": [
     "> \"If you can not build it from scratch, you do not understand it\". \n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86720763",
+   "id": "d8c197ce",
    "metadata": {},
    "source": [
     "## EVM"
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "417c933d",
+   "id": "ff01c3e7",
    "metadata": {},
    "source": [
     "The EVM is a central part of Ethereum. It is Ethereum's execution engine, responsible for executing Ethereum programs, also called Smart Contracts."
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e36f50fb",
+   "id": "0649d0f3",
    "metadata": {},
    "source": [
     "In this tutorial we are going to build the EVM from scratch. However, **this is not a reference implementation.** I will omit implementation details if I believe they are not necessary for understanding how the EVM works. This is about learning the core concepts of the EVM from first principles."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1658984f",
+   "id": "1b8b91c6",
    "metadata": {},
    "source": [
     "That is why I want to call it a mini-EVM. A working but simplified version of the real thing. A virtual machine that takes in an Ethereum program as input and executes that."
@@ -80,18 +80,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "babdf8b1",
+   "id": "5112120b",
    "metadata": {},
    "source": [
-    "Bytecode is simply a list of valid EVM operations"
+    "Bytecode is simply a list of valid EVM `opcodes`. A opcode is a operation like `ADD`, `SUBTRACT` or `STOP`."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3bf819c8",
+   "id": "262c1e04",
    "metadata": {},
    "source": [
-    "Some of these instructions can be seen below:\n",
+    "Some of them can be seen in the table below:\n",
     "\n",
     "| OPCODE | NAME | DESCRIPTION |\n",
     "|----------|----------|----------|\n",
@@ -99,39 +99,31 @@
     "| 0x01 | ADD | Addition operation |\n",
     "| 0x02 | MUL | Multiplication operation |\n",
     "| 0x03 | SUB | Subtraction operation |\n",
-    "| 0x04 | DIV | Integer division operation |\n",
-    "\n",
-    "Currently there are 144 opcodes. You can see all of them [here](https://www.evm.codes/?fork=shanghai). This number changed is not fixed. New opcodes are added and old ones deprecated all the time.\n",
-    "\n",
-    "[evm.codes](https://www.evm.codes/?fork=shanghai) is an awesome resource for looking up EVM opcodes."
+    "| 0x04 | DIV | Integer division operation |"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2046970f",
+   "id": "b4a42310",
    "metadata": {},
    "source": [
-    "The `bytecode` is simply a list of opcodes put together. So for example `604260005260206000F3` is bytecode.\n",
-    "\n",
-    "A Smart Contract is simply bytecode executed by the EVM."
+    "Importantly the EVM does not understand what `ADD` or `SUBTRACT` means. It only knows the identifier of the opcode. For `ADD` that would be `0x01`."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "730b8d72",
+   "id": "7d26cc41",
    "metadata": {},
    "source": [
-    "## Gas"
+    "So a valid program would look like this: `604260005260206000F3`. This is something the EVM could interpret."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "68ebd7ba",
+   "id": "882b5300",
    "metadata": {},
    "source": [
-    "Every Ethereum node has to execute the same bytecode. To avoid a DDOS attack for example every opcode costs a specific amount of gas.\n",
-    "\n",
-    "Gas has to be paid in ETH. If you run out of gas while executing your bytecode your execution stops."
+    "Currently there are 144 opcodes. You can see all of them [here](https://www.evm.codes/?fork=shanghai). This number changes all the time and is not fixed. New opcodes are added and old ones are deprecated quite frequently."
    ]
   },
   {
@@ -144,17 +136,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "27629418",
+   "metadata": {},
+   "source": [
+    "As a developer you really don't want to write bytecode directly most of the time. This would be very slow and very error prone. This is where high-level programming languages like Solidiy or Vyper come in."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2cecd9c",
+   "metadata": {},
+   "source": [
+    "But a Solidity or Vyper file is simply a text file. This is not something the EVM understands. We need a program that takes in the text file and translates that to EVM bytecode. This program is called the `compiler`. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6f926b25",
    "metadata": {},
    "source": [
-    "Solidity, Vyper or even Huff are high-level programming language.\n",
-    "\n",
-    "Fundamentally a solidity file is just a text file full of strings. This is great for the programmer but useless for the EVM. The EVM can only execute bytecode!\n",
-    "\n",
-    "Another program is needed to translate Solidity to bytecode. This program is called a `compiler`.\n",
-    "\n",
-    "Only after the compiler translates the Solidity file it can be executed by the EVM.\n",
-    "\n",
     "![title](static/solidity-compiler.png)"
    ]
   },
@@ -176,12 +176,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cd7486a",
+   "id": "85652361",
    "metadata": {},
    "source": [
-    "What makes Ethereum \"special\" is that it is universal or `Turing complete`. Which means that any arbitrary program can be run on the EVM (we ignore gas and memory restrictions).\n",
-    "\n",
-    "Bitcoin also has scripting capabilities, called `bitcoin script`. But importantly, bitcoin script is **NOT** turing complete. There are programs that you simply can not implement in bitcoin script. That is not the case with the EVM."
+    "What makes Ethereum so special? Compared to other blockchains that came before it like Bitcoin."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fb09d3a",
+   "metadata": {},
+   "source": [
+    "Ethereum is \"special\" because it is universal or `Turing complete`. Which means that any arbitrary program can be run on the EVM (we ignore gas and memory restrictions)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56bee6f1",
+   "metadata": {},
+   "source": [
+    "Bitcoin also has programming capabilities, called `bitcoin script`. But importantly, bitcoin script is **NOT** turing complete. There are programs that you simply can not implement in bitcoin script. That is not the case with for the EVM."
    ]
   },
   {
@@ -189,77 +203,47 @@
    "id": "110dba1d",
    "metadata": {},
    "source": [
-    "### Outline"
+    "## Outline"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b868e294",
+   "id": "0315f282",
    "metadata": {},
    "source": [
-    "We will build the EVM from the bottom up. We will start with the `Stack`, move to `Memory` and `Storage`. Then we implement all EVM `opcodes`. In the end we will combine all these building blocks to create the `EVM`.\n",
-    "\n",
-    "Then we will use the EVM to execute some bytecode.\n",
-    "\n",
-    "The context will be as if the bytecode lives alone. There are no other contracts or accounts to interact with. This is a deliberate choice to keep it simple.\n",
-    "\n",
-    "Opcodes that interact with other accounts, contracts or the ethereum state are mocked."
+    "We will build our mini-EVM from the bottom up. We will start with the `Stack`. Then move to `Memory` and `Storage`. Then we implement all EVM opcodes."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3b676cae",
+   "id": "4969608e",
    "metadata": {},
    "source": [
-    "### What it is not about"
+    "After having built all these building blocks we will combine them to create our own EVM. In the end we are going to use our EVM to run some programs."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4bf2df9c",
+   "id": "4cafa73f",
    "metadata": {},
    "source": [
-    "We will only talk about the execution. We will not talk about consensus mechansims like proof of work of proof of stake.\n",
-    "\n",
-    "If you are interested in these topics check out my video series I did a while back.\n",
-    "\n",
-    "We are also only building the EVM in total \"isolation\". Our EVM is only aware of its bytecode. It does not know about other smart contracts or the current state of the blockchain itself."
+    "It is important to understand that our mini-EVM lives in total isolation. It has no clue about other contracts or accounts. Functions that need to interact with the \"outside world\" are mocked. This is a deliberate choice to keep it simple."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "08b47f0e",
+   "id": "d901b1d7",
    "metadata": {},
    "source": [
-    "## Resources"
+    "## Notes"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e548a89f",
+   "id": "90ae106a",
    "metadata": {},
    "source": [
-    "If you are looking for a understandable reference implemenation I highly recommend [Py-EVM](https://github.com/ethereum/py-evm).\n",
-    "\n",
-    "[evm.codes](https://www.evm.codes/) is the best reference for looking opcodes and what they do."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c065238b",
-   "metadata": {},
-   "source": [
-    "## Disclaimer"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "00c9d162",
-   "metadata": {},
-   "source": [
-    "I will not go for exact EVM equivalence. This is not the point of this project. This is about learning the core concepts of the EVM from first principles. If I think that some implementation detail is not necessary for understanding the core concepts I will leave them out.\n",
-    "\n",
-    "If you think I'm leaving out something interesting, please leave a comment below the video or create an issue or pull request on GitHub."
+    "Every notebook is available [here](https://github.com/shafu0x/evm-from-scratch/tree/main). If you see any mistakes please create an Issue on GitHub, or even better create a Pull Request ;)"
    ]
   }
  ],
