--- a/99_conclusion.ipynb
+++ b/99_conclusion.ipynb
@@ -16,12 +16,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eb7287cc",
+   "cell_type": "markdown",
+   "id": "40a332e8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Resources"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66ce841f",
+   "metadata": {},
+   "source": [
+    "If you are looking for a understandable reference implemenation I highly recommend [Py-EVM](https://github.com/ethereum/py-evm).\n",
+    "\n",
+    "[evm.codes](https://www.evm.codes/) is the best reference for looking opcodes and what they do."
+   ]
   }
  ],
  "metadata": {
